Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87161

qdoc: Group membership of a function is not recorded into the .index file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 RC
    • 5.15, 6.0
    • Build tools: qdoc
    • None
    • 8
    • 05b7b2175754b40b4458eeb706f69715ee8066af (qt/qttools/dev)
    • Da Vinci sprint 18

      It's valid to use the \ingroup command in a function documentation, and the \annotatedlist <groupname> works locally, but when loading the generated index file from another documentation module, we lose the group membership information for functions.

        For Gerrit Dashboard: QTBUG-87161
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes