qdoc: Store group membership for all node types into index files

Up until now, only select node types (PageNodes) stored the
information about \ingroup command argument(s) into the index file.
This meant that generating lists that contain non-page nodes (e.g.
functions) did not produce correct results, if group members included
non-page nodes from other modules.

Add a helper function QDocDatabase::groupNamesForNode() that returns
a list of groups regardless of node type, and use that when generating
the index file.

[ChangeLog][qdoc] QDoc's \generatelist and \annotatedlist commands now
produce correct output when listing functions from external
documentation modules.

Fixes: QTBUG-87161
Change-Id: Id3079729891ec22716e4b7606bec604a7ebff74a
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>